--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+    "name": "sweetrpg-data-api",
+    "scripts": {
+        "start": "postgraphile --plugins '' -c 'postgres://sweetrpg@localhost/sweetrpg' -p 8967 -w -j -b"
+    },
+    "repository": {
+        "type": "git",
+        "url": "ssh://git@github.com/paulyhedral/sweetrpg-data-api.git"
+    },
+    "license": "commercial",
     "dependencies": {
         "postgraphile": "^4.0.0-rc.1"
     }
